--- a/Optimised/Optimised.csproj
+++ b/Optimised/Optimised.csproj
@@ -76,6 +76,12 @@
       <DependentUpon>Login.cs</DependentUpon>
     </Compile>
     <Compile Include="iTalk.cs" />
+    <Compile Include="Offline.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Offline.Designer.cs">
+      <DependentUpon>Offline.cs</DependentUpon>
+    </Compile>
     <Compile Include="Optimised.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -87,6 +93,9 @@
     <Compile Include="Utile.cs" />
     <EmbeddedResource Include="Login.resx">
       <DependentUpon>Login.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Offline.resx">
+      <DependentUpon>Offline.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Optimised.resx">
       <DependentUpon>Optimised.cs</DependentUpon>
